--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,22 @@
 body{
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgba(255, 0, 212, 0.808);
+    font-size: 16px;
+    color: rgba(0, 0, 0, 0.808);
+    margin: 0;
+    padding: 0;
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
+}
+
+#container h1
+{
+     font-size: 20px;
 }
